fix spacing on iphone

--- a/src/app/views/home/Home.scss
+++ b/src/app/views/home/Home.scss
@@ -140,7 +140,7 @@
         // animation: float 6s ease-in-out infinite;
 
         @media screen and (max-width: $break-small) {
-          margin-top: 80px;
+          margin: 80px 0 0 0;
         }
       }
 
@@ -154,7 +154,7 @@
 
       #right-image {
         margin-right: 50px !important;
-        margin-top: 20px;
+        margin: 20px 0 0 0;
         width: 250px !important;
         height: 250px !important;
 
